# sgu-coursework

./: .gitignore  Cargo.toml  justfile
backend/: Cargo.toml
backend/src/: config.rs  main.rs  plugins.rs  state.rs
backend/src/api/: mod.rs  plugins.rs  ws.rs
example-plugins/simple-plugin/: Cargo.toml
example-plugins/simple-plugin/src/: lib.rs
frontend/src/: App.css  App.jsx  index.css  main.jsx
plugin-sdk/: Cargo.toml
plugin-sdk/src/: elements.rs  lib.rs
