[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"
anyhow = "1.0.98"
dotenv = "0.15.0"
env_logger = "0.11.8"
extism = "1.11.1"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
plugin-sdk = { path = "../plugin-sdk" }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
